# ESP-IDF-ICM-42670-P

./: CMakeLists.txt  README.md
main/: CMakeLists.txt  main.c
main/Examples/: InitIMU.c
main/src/: imu.c  imu.h
